crawler-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: synergychat-crawler
  labels:
    app: synergychat-crawler # Will be used to select the pods that this deployment manages
spec:
  replicas: 1
  selector:
    matchLabels:
      app: synergychat-crawler # This should match the label in metadata/labels/app
  template:
    metadata:
      labels:
        app: synergychat-crawler # Should match the label in metadata/labels/app. These labels is the way for k8s to know which pods belong to which deployments
    spec:
      containers:
      - name: synergychat-crawler-1
        image: bootdotdev/synergychat-crawler:latest
        volumeMounts:
          - name: cache-volume
            mountPath: /cache
          - name: synergychat-api-volume
            mountPath: /persist
      - name: synergychat-crawler-2
        image: bootdotdev/synergychat-crawler:latest
        volumeMounts:
          - name: cache-volume
            mountPath: /cache
          - name: synergychat-api-volume
            mountPath: /persist
      - name: synergychat-crawler-3
        image: bootdotdev/synergychat-crawler:latest
        volumeMounts:
          - name: cache-volume
            mountPath: /cache
          - name: synergychat-api-volume
            mountPath: /persist
      volumes: 
        - name: cache-volume
          emptyDir: {}
        - name: synergychat-api-volume
          persistentVolumeClaim: 
            claimName: synergychat-api-pvc
