api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  type: ClusterIP # default  
  selector:
    app: synergychat-api # pods to which route traffic to (this label is inside your .yaml file, mine is api-deployment.yaml)
  ports:
    - protocol: TCP # in order to use https
      port: 80 # port service is listening on
      targetPort: 8080 # port pods are listening on
