crawler-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crawler-service
spec:
  selector:
    app: synergychat-crawler # pods to which route traffic to (this label is inside your .yaml file, mine is crawler-deployment.yaml)
  ports:
    - protocol: TCP # in order to use https
      port: 80 # port the service will be listening on 
      targetPort: 8080 # the port pods are listening on
